# rag-deployment

./: .dockerignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  rag_test.py
.github/workflows/: ci.yaml  deploy.yaml  deploy.yml
app/: __init__.py  agent.py  api.py  config.py  embedding.py  generation.py  ingestion.py  reranker.py  retrieval.py
tests/: conftest.py  test_agent.py  test_api.py  test_embedding.py  test_generation.py  test_ingestion.py  test_lint.py  test_main.py  test_reranker.py  test_retrieval.py
