[project]
name = "rag-classic"
version = "0.1.0"
description = "A simple RAG Chatbot using Pinecone and LangChain"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pinecone>=5.0.0",
    "langchain-openai>=0.3.0",
    "pypdf>=5.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
]
