[project]
name = "rag-classic"
version = "0.1.0"
description = "A simple RAG Chatbot using Pinecone and LangChain"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pinecone>=5.0.0",
    "langchain-openai>=0.3.0",
    "pypdf>=5.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.27.0",
    "ruff>=0.15.0",
]

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort (import sorting)
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "T20",   # flake8-print (flag print statements)
    "S",     # flake8-bandit (security)
]
ignore = [
    "T201",  # allow print() — CLI app uses print for output
    "S101",  # allow assert — used in tests
    "S603",  # allow subprocess calls — used in lint tests
    "S607",  # allow partial executable path in subprocess
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S", "B"]
"rag_test.py" = ["T201", "E501"]
